package protocol;

option java_package = "protocol";

enum ENetworkMessage{
    KEEP_ALIVE_SYNC=0;
    REGISTER_REQ=1;
    REGISTER_RSP=2;
    LOGIN_REQ=3;
    LOGIN_RSP=4;
	PERSONALSETTINGS_REQ=5;
	PERSONALSETTINGS_RSP=6;
	GETUSERINFO_REQ=7;
	GETUSERINFO_RSP=8;
	ADDFRIEND_REQ=9;
	ADDFRIEND_RSP=10;
	DELETEFRIEND_REQ=11;
	DELETEFRIEND_RSP=12;
	OFFLINE_SYNC=13;
	LOGOUT_REQ=14;
	LOGOUT_RSP=15;
}
